--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <resources>
     <string name="app_name">Addresserly</string>
+    <string name="details_screen">Address Details</string>
     <string name="distance">%1$s KM</string>
     <string name="invalid_distance">Invalid distance</string>
     <string name="unknown_address">Unknown address</string>
+    <string name="empty_label">No label set</string>
+    <string name="no_coordinates">No coordinates set</string>
     <string name="distance_label">Distance</string>
     <string name="address">Address</string>
     <string name="coordinates_label">Coordinates</string>
